# funcproj

./: README.md  Readme_Interpretor.txt  circle.hs  high_pass.hs  inp.txt  interpreter_1.hs  interpreter_2.hs  interpreter_3.hs  interpreter_4.hs  interpreter_5.hs  low_pass.hs  mypoly.hs  mysquare.hs  paint.hi  paint.hs  pre.hi  pre.hs  prec.hi  prec.hs  stline.hi  stline.hs
Submission/project-src/: Gloss_lang.txt  High_pass.hs  Interpretor.hs  Low_pass.hs  Main.cabal  Main.hs  Parser.hs  README  out.txt
Submission/project-src/Graphics/Gloss/Data/: Display.hi  Point.hi  Vector.hi
Submission/project-src/Graphics/Gloss/Interface/Pure/: Display.hi  Game.hi
Submission/project-src/Graphics/Gloss/Internals/Interface/: Game.hi  ViewPort.hi  Window.hi
Submission/project-src/Graphics/Gloss/Internals/Interface/Animate/: Timing.hi
Submission/project-src/Graphics/Gloss/Internals/Interface/Backend/: GLUT.hi  Types.hi
Submission/project-src/Graphics/Gloss/Internals/Interface/Simulate/: Idle.hi  State.hi
Submission/project-src/Graphics/Gloss/Internals/Render/: Circle.hi
Submission/project-src/Sample input/: Gloss_lang.txt  Main.hi  Main.hs  Parser.hi  input.txt  out.txt
Submission/project-src/Sample input/Graphics/: Gloss.hi
Submission/project-src/Sample input/Graphics/Gloss/Data/: Color.hi  Color.hs  Picture.hi
Submission/project-src/Sample input/Graphics/Gloss/Geometry/: Angle.hi  Line.hi
Submission/project-src/Sample input/Graphics/Gloss/Internals/: Color.hi
Submission/project-src/haddock/: Graphics-Gloss-Data-Color.html  Graphics-Gloss-Data-Display.html  Graphics-Gloss-Data-Picture.html  Graphics-Gloss-Data-Point.html  Graphics-Gloss-Data-Vector.html  Graphics-Gloss-Geometry-Angle.html  Graphics-Gloss-Geometry-Line.html  Graphics-Gloss-Interface-Pure-Animate.html  Graphics-Gloss-Interface-Pure-Display.html  Graphics-Gloss-Interface-Pure-Game.html  Graphics-Gloss-Interface-Pure-Simulate.html  Graphics-Gloss-Internals-Interface-Animate.html  Graphics-Gloss-Internals-Interface-Backend-Types.html  Graphics-Gloss-Internals-Interface-Backend.html  Graphics-Gloss-Internals-Interface-Display.html  Graphics-Gloss-Internals-Interface-Game.html  Graphics-Gloss-Internals-Interface-Simulate.html  Graphics-Gloss-Internals-Interface-ViewPort.html  Graphics-Gloss-Internals-Render-Bitmap.html  Graphics-Gloss.html  High_pass.html  Interpreter.html  Low_pass.html  Main.html  Parser.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  (+37 more)
(+73 files in other folders)
