Name:                Main
Version:             0.0
Synopsis:            Simple picture drawing application.
Description:         Simple picture drawing application that can be used 
					 to draw simple shapes and straight lines.
License:             GPL
Build-Type:          Simple
Author:              Functional-group
Maintainer:          Arbaz Khan <arbazk@cse.iitk.ac.in>
Build-Depends:       base       == 4.5.*,
					 ghc-prim   == 0.2.*,
					 containers == 0.4.*,
					 bytestring == 0.10.*,
					 OpenGL     == 2.6.*,
					 GLUT       == 2.3.*,
					 bmp        >= 1.2.3.2 && < 1.2.4,
					 stm

Executable:          Main
Main-is:             Main.hs

ghc-options:      -O2 -Wall
Other-modules:
	Parser
	Graphics.Gloss
	Graphics.Gloss.Geometry
	Graphics.Gloss.Geometry.Angle
	Graphics.Gloss.Geometry.Line
	Graphics.Gloss.Data.Display
	Graphics.Gloss.Data.Point
	Graphics.Gloss.Data.Vector
	Graphics.Gloss.Data.Quad
	Graphics.Gloss.Data.Extent
	Graphics.Gloss.Data.QuadTree
	Graphics.Gloss.Data.Color
	Graphics.Gloss.Data.Picture
	Graphics.Gloss.Algorithms.RayCast
	Graphics.Gloss.Interface.Pure.Display
	Graphics.Gloss.Interface.Pure.Animate
	Graphics.Gloss.Interface.Pure.Simulate
	Graphics.Gloss.Interface.Pure.Game
	Graphics.Gloss.Interface.IO.Animate
	Graphics.Gloss.Interface.IO.Simulate
	Graphics.Gloss.Interface.IO.Game
	Graphics.Gloss.Internals.Color
	Graphics.Gloss.Internals.Interface.Animate.State
	Graphics.Gloss.Internals.Interface.Animate.Timing
	Graphics.Gloss.Internals.Interface.Backend.Types
	Graphics.Gloss.Internals.Interface.Callback
	Graphics.Gloss.Internals.Interface.Common.Exit
	Graphics.Gloss.Internals.Interface.Debug
	Graphics.Gloss.Internals.Interface.Simulate.Idle
	Graphics.Gloss.Internals.Interface.Simulate.State
	Graphics.Gloss.Internals.Interface.ViewPort
	Graphics.Gloss.Internals.Interface.ViewPort.Command
	Graphics.Gloss.Internals.Interface.ViewPort.ControlState
	Graphics.Gloss.Internals.Interface.ViewPort.KeyMouse
	Graphics.Gloss.Internals.Interface.ViewPort.Motion
	Graphics.Gloss.Internals.Interface.ViewPort.Reshape
	Graphics.Gloss.Internals.Interface.Window
	Graphics.Gloss.Internals.Render.Bitmap
	Graphics.Gloss.Internals.Render.Circle
	Graphics.Gloss.Internals.Render.Common
	Graphics.Gloss.Internals.Render.State
	Graphics.Gloss.Internals.Render.Picture
	Graphics.Gloss.Internals.Render.ViewPort
	Graphics.Gloss.Internals.Interface.Display
	Graphics.Gloss.Internals.Interface.Animate
	Graphics.Gloss.Internals.Interface.Simulate
	Graphics.Gloss.Internals.Interface.Game
	Graphics.Gloss.Internals.Interface.Backend
